# Education

./: CMakeLists.txt
Figures/: CMakeLists.txt  Circle.cpp  Circle.h  Point.cpp  Point.h  main.cpp
Fraction/: CMakeLists.txt  Console.cpp  Console.h  Fractions.cpp  Fractions.h  main.cpp
Fruits/: Apple.cpp  Apple.h  Banana.cpp  Banana.h  Basket.cpp  Basket.h  CMakeLists.txt  Color.cpp  Color.h  Console.cpp  Console.h  Fruit.cpp  Fruit.h  main.cpp
Student/: CMakeLists.txt  Group.h  Subject.cpp
Test/: CMakeLists.txt
